# fuel-price-finder-simulator

./: .python-version  Makefile  README.md  fuel-prices.ipynb  fuel-prices.py  install.sh  pyproject.toml  run.sh
