[tool.poetry]
name = "fuel-price-finder-simulator"
version = "0.1.0"
description = ""
authors = ["Nam Tonthat <n.nam.tonthat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
requests = "^2.28.1"
bs4 = "^0.0.1"
clipboard = "^0.0.4"
pyyaml = "^6.0"
pymobiledevice3 = "^2.11.0"
fastapi = "0.95.0"
pydantic = "1.10.7"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
